force-app/main/default/objects/Boston_Housing_Data__c/Boston_Housing_Data__c.object-meta.xml
<CustomObject>
    <label>Boston Housing Data</label>
    <nameField>
        <label>Boston Housing Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boston Housing Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>