force-app/main/default/objects/Boston_Housing_Data__c/fields/Age_Of_Housing__c.field-meta.xml
<CustomField>
    <fullName>Age_Of_Housing__c</fullName>
    <label>Age Of Housing</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>