force-app/main/default/objects/Boston_Housing_Data__c/fields/Crime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Crime_Rate__c</fullName>
    <label>Crime Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>