force-app/main/default/objects/Boston_Housing_Data__c/fields/Distance_To_Commute__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Commute__c</fullName>
    <label>Distance To Commute</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>