force-app/main/default/objects/Boston_Housing_Data__c/fields/Distance_To_Highway__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Highway__c</fullName>
    <label>Distance To Highway</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>