force-app/main/default/objects/Boston_Housing_Data__c/fields/Industrial_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Proportion__c</fullName>
    <label>Industrial Proportion</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>