force-app/main/default/objects/Boston_Housing_Data__c/fields/Istest__c.field-meta.xml
<CustomField>
    <fullName>Istest__c</fullName>
    <label>Istest</label>
    <length>1</length>
    <type>Text</type>
</CustomField>