force-app/main/default/objects/Boston_Housing_Data__c/fields/Land_Zone_Size__c.field-meta.xml
<CustomField>
    <fullName>Land_Zone_Size__c</fullName>
    <label>Land Zone Size</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>