force-app/main/default/objects/Boston_Housing_Data__c/fields/Next_To_River__c.field-meta.xml
<CustomField>
    <fullName>Next_To_River__c</fullName>
    <label>Next To River</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>