force-app/main/default/objects/Boston_Housing_Data__c/fields/Nitric_Oxide_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Nitric_Oxide_Concentration__c</fullName>
    <label>Nitric Oxide Concentration</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>