force-app/main/default/objects/Boston_Housing_Data__c/fields/Rooms_Per_House__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Per_House__c</fullName>
    <label>Rooms Per House</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>