force-app/main/default/objects/Boston_Housing_Data__c/fields/School_Class_Size__c.field-meta.xml
<CustomField>
    <fullName>School_Class_Size__c</fullName>
    <label>School Class Size</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>