force-app/main/default/objects/Boston_Housing_Data__c/fields/School_Dropout_Rate__c.field-meta.xml
<CustomField>
    <fullName>School_Dropout_Rate__c</fullName>
    <label>School Dropout Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>