force-app/main/default/objects/Boston_Housing_Data__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>